--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 
 <header>
     <div class="masthead">
-        <div class="logo">
-            <img src="./images/iamjoefrostlogo.png" alt="" /></div>
+        <a href="./index.html"> <div class="logo">
+            <img src="./images/iamjoefrostlogo.png" alt="" /></div></a>
         <nav>
             <ul>
                 <li><a href="./digital.html">Digital</a></li>
                 <li><a href="#">Print</a></li>
-                <li><a href="#">Creative Direction</a></li>
+                <li><a href="#">Art Direction</a></li>
                 <li><a href="http://www.google.com" target="_blank">Illustration</a></li>
                 <li><a href="mailto:iamjofrost@gmail.com?Subject=Hola%20Jo&body=Hi%20Jo%20saw%20site">Say Hi</a></li>
 
@@ -67,7 +67,7 @@
                 </div>
                 <div class="column">
                     <a href="#">
-                        <div class="content d3"><span class="p_title">Main another line Project Title 3</span></div>
+                        <div class="content d3"><span class="p_title">Main Project Title 3</span></div>
                     </a>
                 </div>
             </div>
@@ -79,7 +79,9 @@
             <div class="row">
                 <div class="column">
                     <a href="#">
-                        <div class="content d1"><span class="p_title">Main Project Title 1</span></div>
+                        <div class="content d1">
+                            <span class="p_title">Main Project Title 1</span>
+                        </div>
                     </a>
                 </div>
                 <div class="column">
@@ -98,7 +100,7 @@
         </section>
         <!-- DIGITAL DESIGN SECTION ENDS-->
 
-        <!-- SEE ALL NAV-->
+        <!-- SEE ALL DIGITAL BUTTON-->
         <div class="see_all_container">
             <div class="see_all_btn">
                 <a href="#">See All Digital</a></div>
