--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <!-- SEE ALL DIGITAL BUTTON-->
         <div class="see_all_container">
             <div class="see_all_btn">
-                <a href="#">See All Digital</a></div>
+                <a href="./digital.html">See All Digital</a></div>
         </div>
 
 
