Sunday night homework

--- a/digital.html
+++ b/digital.html
@@ -53,7 +53,7 @@
         <section class="responsive">
             <div class="row">
                 <div class="column">
-                    <a href="#">
+                    <a href="./digital_project_1.html">
                         <div class="content d1"><span class="p_title">Main Project Title 1</span></div>
                     </a>
                 </div>
