--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
         <section class="responsive">
             <div class="row">
                 <div class="column">
-                    <a href="#">
-                        <div class="content d1"><span class="p_title">Main Project Title 1</span></div>
+                    <a href="./digital_project_1.html">
+                        <div class="content d1">
+                            <span class="p_title">Main Project Title 1</span></div>
                     </a>
                 </div>
                 <div class="column">
