--- a/digital.html
+++ b/digital.html
@@ -21,25 +21,26 @@
 
 </head>
 
-<header>
-    <div class="masthead">
-        <a href="./index.html"> <div class="logo">
-            <img src="./images/iamjoefrostlogo.png" alt="" /></div></a>
-        <nav>
-            <ul>
-                <li><a href="./digital.html">Digital</a></li>
-                <li><a href="#">Print</a></li>
-                <li><a href="#">Art Direction</a></li>
-                <li><a href="http://www.google.com" target="_blank">Illustration</a></li>
-                <li><a href="mailto:iamjofrost@gmail.com?Subject=Hola%20Jo&body=Hi%20Jo%20saw%20site">Say Hi</a></li>
-
-            </ul>
-        </nav>
-    </div>
-</header>
-
 <body>
+    <header>
+        <div class="masthead">
+            <a class="logo" href="./index.html">
+                <img src="./images/iamjoefrostlogo.png" alt="" />
+            </a>
+            <nav>
+                <ul>
+                    <li><a href="./digital.html">Digital</a></li>
+                    <li><a href="#">Print</a></li>
+                    <li><a href="#">Art Direction</a></li>
+                    <li><a href="http://www.google.com" target="_blank">Illustration</a></li>
+                    <li><a href="mailto:iamjofrost@gmail.com?Subject=Hola%20Jo&body=Hi%20Jo%20saw%20site">Say Hi</a></li>
+                </ul>
+            </nav>
 
+            <a href="#"> <div class="burger" id="burger">
+                <img src="./images/burger2.png" alt="" /></div></a>
+        </div>
+    </header>
     <main>
         <!-- DIGITAL DESIGN SECTION STARTS-->
         <div class="digital_top">
@@ -51,7 +52,6 @@
         <!-- DIGITAL BLOCK 1 -->
 
         <section class="responsive">
-            <div class="row">
                 <div class="column">
                     <a href="./digital_project_1.html">
                         <div class="content d1"><span class="p_title">Main Project Title 1</span></div>
@@ -69,32 +69,39 @@
                         <div class="content d3"><span class="p_title">Main Project Title 3</span></div>
                     </a>
                 </div>
-            </div>
-        </section>
-
-        <!-- DIGITAL BLOCK 2 -->
-
-        <section class="responsive">
-            <div class="row">
                 <div class="column">
-                    <a href="#">
-                        <div class="content d1">
-                            <span class="p_title">Main Project Title 1</span>
-                        </div>
+                    <a href="./digital_project_1.html">
+                        <div class="content d1"><span class="p_title">Main</span></div>
                     </a>
                 </div>
                 <div class="column">
                     <a href="#">
                         <div class="content d2">
-                            <span class="p_title">Main Project Title 2</span>
+                            <span class="p_title">Main Project</span>
                         </div>
                     </a>
                 </div>
                 <div class="column">
                     <a href="#">
-                        <div class="content d3"><span class="p_title">Main another line Project Title 3</span></div>
+                        <div class="content d3"><span class="p_title">Main</span></div>
                     </a>
                 </div>
-            </div>
         </section>
+
         <!-- DIGITAL DESIGN SECTION ENDS-->
+
+    </main>
+    <nav id="overlay" class="overlay">
+        <button class="overlay-close" id="overlayClose">
+            X
+        </button>
+        <a href="./digital.html">Digital</a>
+        <a href="#">Print</a>
+        <a href="#">Art Direction</a>
+        <a href="http://www.google.com" target="_blank">Illustration</a>
+        <a href="mailto:iamjofrost@gmail.com?Subject=Hola%20Jo&body=Hi%20Jo%20saw%20site">Say Hi</a>
+    </nav>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
+    <script src="./main.js"></script>
+</body>
+</html>
