--- a/digital.html
+++ b/digital.html
@@ -93,7 +93,7 @@
     </main>
     <nav id="overlay" class="overlay">
         <button class="overlay-close" id="overlayClose">
-            X
+        <img src="./images/close.png" alt="X"/>
         </button>
         <a href="./digital.html">Digital</a>
         <a href="#">Print</a>
