--- a/digital.html
+++ b/digital.html
@@ -30,10 +30,11 @@
             <nav>
                 <ul>
                     <li><a href="./digital.html">Digital</a></li>
-                    <li><a href="#">Print</a></li>
-                    <li><a href="#">Art Direction</a></li>
-                    <li><a href="http://www.google.com" target="_blank">Illustration</a></li>
-                    <li><a href="mailto:iamjofrost@gmail.com?Subject=Hola%20Jo&body=Hi%20Jo%20saw%20site">Say Hi</a></li>
+                    <li><a href="./print.html">Print</a></li>
+                    <li><a href=".artdirection.html">Art Direction</a></li>
+                    <li><a href=".branding.html">Branding</a></li>
+                    <li><a href=".illstration.html">Illustration</a></li>
+                    <li><a href="mailto:iamjofrost@gmail.com?Subject=iamjoefrost%20Enquiry">Say Hi</a></li>
                 </ul>
             </nav>
 
@@ -96,10 +97,12 @@
         <img src="./images/close.png" alt="X"/>
         </button>
         <a href="./digital.html">Digital</a>
-        <a href="#">Print</a>
-        <a href="#">Art Direction</a>
-        <a href="http://www.google.com" target="_blank">Illustration</a>
+        <a href="./print.html">Print</a>
+        <a href="./artdirection.html">Art Direction</a>
+        <a href="./branding.html">Branding</a>
+        <a href="./illustration.html">Illustration</a>
         <a href="mailto:iamjofrost@gmail.com?Subject=Hola%20Jo&body=Hi%20Jo%20saw%20site">Say Hi</a>
+        <!-- <a href="http://www.google.com" target="_blank">Illustration</a> -->
     </nav>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
     <script src="./main.js"></script>
