--- a/index.html
+++ b/index.html
@@ -20,25 +20,27 @@
     <link href="https://fonts.googleapis.com/css?family=BioRhyme:200,300,400|Oswald:300,400" rel="stylesheet">
 
 </head>
-
-<header>
-    <div class="masthead">
-        <a href="./index.html"> <div class="logo">
-            <img src="./images/iamjoefrostlogo.png" alt="" /></div></a>
-        <nav>
-            <ul>
-                <li><a href="./digital.html">Digital</a></li>
-                <li><a href="#">Print</a></li>
-                <li><a href="#">Art Direction</a></li>
-                <li><a href="http://www.google.com" target="_blank">Illustration</a></li>
-                <li><a href="mailto:iamjofrost@gmail.com?Subject=Hola%20Jo&body=Hi%20Jo%20saw%20site">Say Hi</a></li>
-
-            </ul>
-        </nav>
-    </div>
-</header>
-
 <body>
+    <header>
+        <div class="masthead">
+            <a class="logo" href="./index.html">
+                <img src="./images/iamjoefrostlogo.png" alt="" />
+            </a>
+            <nav>
+                <ul>
+                    <li><a href="./digital.html">Digital</a></li>
+                    <li><a href="./print.html">Print</a></li>
+                    <li><a href=".artdirection.html">Art Direction</a></li>
+                    <li><a href=".branding.html">Branding</a></li>
+                    <li><a href=".illstration.html">Illustration</a></li>
+                    <li><a href="mailto:iamjofrost@gmail.com?Subject=iamjoefrost%20Enquiry">Say Hi</a></li>
+                </ul>
+            </nav>
+
+            <a href="#"> <div class="burger" id="burger">
+                <img src="./images/burger2.png" alt="" /></div></a>
+        </div>
+    </header>
 
     <main>
         <!-- DIGITAL DESIGN SECTION STARTS-->
@@ -50,13 +52,11 @@
         </div>
 
         <!-- DIGITAL BLOCK 1 -->
-
+<div class="teaser_container">
         <section class="responsive">
-            <div class="row">
                 <div class="column">
                     <a href="./digital_project_1.html">
-                        <div class="content d1">
-                            <span class="p_title">Main Project Title 1</span></div>
+                        <div class="content d1"><span class="p_title">Main Project Title 1</span></div>
                     </a>
                 </div>
                 <div class="column">
@@ -71,34 +71,25 @@
                         <div class="content d3"><span class="p_title">Main Project Title 3</span></div>
                     </a>
                 </div>
-            </div>
-        </section>
-
-        <!-- DIGITAL BLOCK 2 -->
-
-        <section class="responsive">
-            <div class="row">
                 <div class="column">
-                    <a href="#">
-                        <div class="content d1">
-                            <span class="p_title">Main Project Title 1</span>
-                        </div>
+                    <a href="./digital_project_1.html">
+                        <div class="content d1"><span class="p_title">Main</span></div>
                     </a>
                 </div>
                 <div class="column">
                     <a href="#">
                         <div class="content d2">
-                            <span class="p_title">Main Project Title 2</span>
+                            <span class="p_title">Main Project</span>
                         </div>
                     </a>
                 </div>
                 <div class="column">
                     <a href="#">
-                        <div class="content d3"><span class="p_title">Main another line Project Title 3</span></div>
+                        <div class="content d3"><span class="p_title">Main</span></div>
                     </a>
                 </div>
-            </div>
         </section>
+
         <!-- DIGITAL DESIGN SECTION ENDS-->
 
         <!-- SEE ALL DIGITAL BUTTON-->
@@ -106,7 +97,7 @@
             <div class="see_all_btn">
                 <a href="./digital.html">See All Digital</a></div>
         </div>
-
+</div>
 
         <!-- PRINT DESIGN SECTION STARTS-->
         <div class="hero hero2">
@@ -158,7 +149,6 @@
     </footer>
     <!-- END OF FOOTER -->
 
-        </main>
-    
+
     </body>
     </html>
