--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
         </div>
 
         <!-- DIGITAL BLOCK 1 -->
-<div class="teaser_container">
         <section class="responsive">
                 <div class="column">
                     <a href="./digital_project_1.html">
@@ -97,7 +96,6 @@
             <div class="see_all_btn">
                 <a href="./digital.html">See All Digital</a></div>
         </div>
-</div>
 
         <!-- PRINT DESIGN SECTION STARTS-->
         <div class="hero hero2">
@@ -108,47 +106,229 @@
         </div>
 
         <!-- PRINT BLOCK 1 -->
-
         <section class="responsive">
-            <div class="row">
                 <div class="column">
-                    <a href="#">
-                        <div class="content d1"><span class="p_title">Main Project Title 1</span></div>
+                    <a href="./digital_project_1.html">
+                        <div class="content p1"><span class="p_title">Main Project Title 1</span></div>
                     </a>
                 </div>
                 <div class="column">
                     <a href="#">
-                        <div class="content d2">
+                        <div class="content p2">
                             <span class="p_title">Main Project Title 2</span>
                         </div>
                     </a>
                 </div>
                 <div class="column">
                     <a href="#">
-                        <div class="content d3"><span class="p_title">Main another line Project Title 3</span></div>
+                        <div class="content p3"><span class="p_title">Main Project Title 3</span></div>
                     </a>
                 </div>
-            </div>
+                <div class="column">
+                    <a href="./digital_project_1.html">
+                        <div class="content p4"><span class="p_title">Main</span></div>
+                    </a>
+                </div>
+                <div class="column">
+                    <a href="#">
+                        <div class="content p5">
+                            <span class="p_title">Main Project</span>
+                        </div>
+                    </a>
+                </div>
+                <div class="column">
+                    <a href="#">
+                        <div class="content p6"><span class="p_title">Main</span></div>
+                    </a>
+                </div>
         </section>
 
         <!-- PRINT DESIGN SECTION ENDS-->
 
+        <!-- SEE ALL PRINT BUTTON-->
+        <div class="see_all_container">
+            <div class="see_all_btn">
+                <a href="./print.html">See All Print</a></div>
+        </div>
+
+        <!-- PRINT DESIGN SECTION ENDS-->
+
+        <!-- ART DIRECTION SECTION STARTS-->
+        <div class="hero hero3">
+            <div class="hero_title">
+                <h1>art</h1>
+                <h2>direction</h2>
+            </div>
+        </div>
+
+        <!-- ART DIRECTION BLOCK 1 -->
+        <section class="responsive">
+                <div class="column">
+                    <a href="./digital_project_1.html">
+                        <div class="content ad1"><span class="p_title">Main Project Title 1</span></div>
+                    </a>
+                </div>
+                <div class="column">
+                    <a href="#">
+                        <div class="content ad2">
+                            <span class="p_title">Main Project Title 2</span>
+                        </div>
+                    </a>
+                </div>
+                <div class="column">
+                    <a href="#">
+                        <div class="content ad3"><span class="p_title">Main Project Title 3</span></div>
+                    </a>
+                </div>
+                <div class="column">
+                    <a href="./digital_project_1.html">
+                        <div class="content ad4"><span class="p_title">Main</span></div>
+                    </a>
+                </div>
+                <div class="column">
+                    <a href="#">
+                        <div class="content ad5">
+                            <span class="p_title">Main Project</span>
+                        </div>
+                    </a>
+                </div>
+                <div class="column">
+                    <a href="#">
+                        <div class="content ad6"><span class="p_title">Main</span></div>
+                    </a>
+                </div>
+        </section>
+
+        <!-- PRINT DESIGN SECTION ENDS-->
+
+        <!-- SEE ALL PRINT BUTTON-->
+        <div class="see_all_container">
+            <div class="see_all_btn">
+                <a href="./print.html">See All Art Direction</a></div>
+        </div>
+        <!-- BRANDING SECTION STARTS-->
+        <div class="hero hero4">
+            <div class="hero_title">
+                <h1>branding</h1>
+                <!-- <h2>direction</h2> -->
+            </div>
+        </div>
+
+        <!-- BRANDING BLOCK 1 -->
+        <section class="responsive">
+                <div class="column">
+                    <a href="./digital_project_1.html">
+                        <div class="content b1"><span class="p_title">Main Project Title 1</span></div>
+                    </a>
+                </div>
+                <div class="column">
+                    <a href="#">
+                        <div class="content b2">
+                            <span class="p_title">Main Project Title 2</span>
+                        </div>
+                    </a>
+                </div>
+                <div class="column">
+                    <a href="#">
+                        <div class="content b3"><span class="p_title">Main Project Title 3</span></div>
+                    </a>
+                </div>
+                <div class="column">
+                    <a href="./digital_project_1.html">
+                        <div class="content b4"><span class="p_title">Main</span></div>
+                    </a>
+                </div>
+                <div class="column">
+                    <a href="#">
+                        <div class="content b5">
+                            <span class="p_title">Main Project</span>
+                        </div>
+                    </a>
+                </div>
+                <div class="column">
+                    <a href="#">
+                        <div class="content b6"><span class="p_title">Main</span></div>
+                    </a>
+                </div>
+        </section>
+
+        <!-- SEE ALL BRANDING BUTTON-->
+        <div class="see_all_container">
+            <div class="see_all_btn">
+                <a href="./branding.html">See All Branding</a></div>
+        </div>
+        <!-- BRANDING SECTION ENDS-->
+
+        <!-- ILLUSTRATION STARTS-->
+        <div class="hero hero4">
+            <div class="hero_title">
+                <h1>Illustration</h1>
+                <!-- <h2>direction</h2> -->
+            </div>
+        </div>
+
+        <!-- ILLUSTRATION BLOCK 1 -->
+        <section class="responsive">
+                <div class="column">
+                    <a href="./digital_project_1.html">
+                        <div class="content i1"><span class="p_title">Main Project Title 1</span></div>
+                    </a>
+                </div>
+                <div class="column">
+                    <a href="#">
+                        <div class="content i2">
+                            <span class="p_title">Main Project Title 2</span>
+                        </div>
+                    </a>
+                </div>
+                <div class="column">
+                    <a href="#">
+                        <div class="content i3"><span class="p_title">Main Project Title 3</span></div>
+                    </a>
+                </div>
+                <div class="column">
+                    <a href="./digital_project_1.html">
+                        <div class="content i4"><span class="p_title">Main</span></div>
+                    </a>
+                </div>
+                <div class="column">
+                    <a href="#">
+                        <div class="content i5">
+                            <span class="p_title">Main Project</span>
+                        </div>
+                    </a>
+                </div>
+                <div class="column">
+                    <a href="#">
+                        <div class="content i6"><span class="p_title">Main</span></div>
+                    </a>
+                </div>
+        </section>
+
+        <!-- SEE ALL ILLUSTRATION BUTTON-->
+        <div class="see_all_container">
+            <div class="see_all_btn">
+                <a href="./illustration.html">See All Illustration</a></div>
+        </div>
+        <!-- ILLUSTRATION SECTION ENDS-->
+
     </main>
 
-    <!-- END OF MAIN CONTENT -->
 
-    <aside class="secondary-footer">
-
-
-    </aside>
-
-    <!-- END OF ASIDE -->
-
-    <footer class="main-footer">
-
-    </footer>
-    <!-- END OF FOOTER -->
-
-
+        <!-- HIDDEN NAV -->
+        <nav id="overlay" class="overlay">
+            <button class="overlay-close" id="overlayClose">
+            <img src="./images/close.png" alt="X"/>
+            </button>
+            <a href="./digital.html">Digital</a>
+            <a href="./print.html">Print</a>
+            <a href="./artdirection.html">Art Direction</a>
+            <a href="./branding.html">Branding</a>
+            <a href="./illustration.html">Illustration</a>
+            <a href="mailto:iamjofrost@gmail.com?Subject=Hola%20Jo&body=Hi%20Jo%20saw%20site">Say Hi</a>
+            <!-- <a href="http://www.google.com" target="_blank">Illustration</a> -->
+        </nav>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
+        <script src="./main.js"></script>
     </body>
     </html>
