--- a/artdirection.html
+++ b/artdirection.html
@@ -46,7 +46,7 @@
         <!-- DIGITAL DESIGN SECTION STARTS-->
         <div class="digital_top">
             <div class="hero_title">
-                <h1 class="section_title">digital <span class="design_tag">design</span></h1>
+                <h1 class="section_title">art <span class="design_tag">direction</span></h1>
             </div>
         </div>
 
@@ -55,36 +55,36 @@
         <section class="responsive">
                 <div class="column">
                     <a href="./digital_project_1.html">
-                        <div class="content d1"><span class="p_title">Main Project Title 1</span></div>
+                        <div class="content ad1"><span class="p_title">Main Project Title 1</span></div>
                     </a>
                 </div>
                 <div class="column">
                     <a href="#">
-                        <div class="content d2">
+                        <div class="content ad2">
                             <span class="p_title">Main Project Title 2</span>
                         </div>
                     </a>
                 </div>
                 <div class="column">
                     <a href="#">
-                        <div class="content d3"><span class="p_title">Main Project Title 3</span></div>
+                        <div class="content ad3"><span class="p_title">Main Project Title 3</span></div>
                     </a>
                 </div>
                 <div class="column">
                     <a href="./digital_project_1.html">
-                        <div class="content d4"><span class="p_title">Main</span></div>
+                        <div class="content ad4"><span class="p_title">Main</span></div>
                     </a>
                 </div>
                 <div class="column">
                     <a href="#">
-                        <div class="content d5">
+                        <div class="content ad5">
                             <span class="p_title">Main Project</span>
                         </div>
                     </a>
                 </div>
                 <div class="column">
                     <a href="#">
-                        <div class="content d6"><span class="p_title">Main</span></div>
+                        <div class="content ad6"><span class="p_title">Main</span></div>
                     </a>
                 </div>
         </section>
