--- a/branding.html
+++ b/branding.html
@@ -43,53 +43,53 @@
         </div>
     </header>
     <main>
-        <!-- DIGITAL DESIGN SECTION STARTS-->
+        <!-- BRANDING SECTION STARTS-->
         <div class="digital_top">
             <div class="hero_title">
-                <h1 class="section_title">digital <span class="design_tag">design</span></h1>
+                <h1 class="section_title">branding</h1>
             </div>
         </div>
 
-        <!-- DIGITAL BLOCK 1 -->
+        <!-- BRANDING BLOCK 1 -->
 
         <section class="responsive">
                 <div class="column">
                     <a href="./digital_project_1.html">
-                        <div class="content d1"><span class="p_title">Main Project Title 1</span></div>
+                        <div class="content b1"><span class="p_title">Main Project Title 1</span></div>
                     </a>
                 </div>
                 <div class="column">
                     <a href="#">
-                        <div class="content d2">
+                        <div class="content b2">
                             <span class="p_title">Main Project Title 2</span>
                         </div>
                     </a>
                 </div>
                 <div class="column">
                     <a href="#">
-                        <div class="content d3"><span class="p_title">Main Project Title 3</span></div>
+                        <div class="content b3"><span class="p_title">Main Project Title 3</span></div>
                     </a>
                 </div>
                 <div class="column">
                     <a href="./digital_project_1.html">
-                        <div class="content d4"><span class="p_title">Main</span></div>
+                        <div class="content b4"><span class="p_title">Main</span></div>
                     </a>
                 </div>
                 <div class="column">
                     <a href="#">
-                        <div class="content d5">
+                        <div class="content b5">
                             <span class="p_title">Main Project</span>
                         </div>
                     </a>
                 </div>
                 <div class="column">
                     <a href="#">
-                        <div class="content d6"><span class="p_title">Main</span></div>
+                        <div class="content b6"><span class="p_title">Main</span></div>
                     </a>
                 </div>
         </section>
 
-        <!-- DIGITAL DESIGN SECTION ENDS-->
+        <!-- BRANDING SECTION ENDS-->
 
     </main>
     <nav id="overlay" class="overlay">
