--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                 <ul>
                     <li><a href="./digital.html">Digital</a></li>
                     <li><a href="./print.html">Print</a></li>
-                    <li><a href=".artdirection.html">Art Direction</a></li>
-                    <li><a href=".branding.html">Branding</a></li>
-                    <li><a href=".illstration.html">Illustration</a></li>
+                    <li><a href="./artdirection.html">Art Direction</a></li>
+                    <li><a href="./branding.html">Branding</a></li>
+                    <li><a href="./illustration.html">Illustration</a></li>
                     <li><a href="mailto:iamjofrost@gmail.com?Subject=iamjoefrost%20Enquiry">Say Hi</a></li>
                 </ul>
             </nav>
@@ -72,19 +72,19 @@
                 </div>
                 <div class="column">
                     <a href="./digital_project_1.html">
-                        <div class="content d1"><span class="p_title">Main</span></div>
+                        <div class="content d4"><span class="p_title">Main</span></div>
                     </a>
                 </div>
                 <div class="column">
                     <a href="#">
-                        <div class="content d2">
+                        <div class="content d5">
                             <span class="p_title">Main Project</span>
                         </div>
                     </a>
                 </div>
                 <div class="column">
                     <a href="#">
-                        <div class="content d3"><span class="p_title">Main</span></div>
+                        <div class="content d6"><span class="p_title">Main</span></div>
                     </a>
                 </div>
         </section>
